Fixed translations, completed gift card page

--- a/admin/app/views/spree/admin/gift_cards/_list.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_list.html.erb
@@ -9,7 +9,7 @@
           <th><%= Spree.t(:currency) %></th>
           <th><%= Spree.t(:status) %></th>
           <th><%= Spree.t(:expires_at) %></th>
-          <th><%= Spree.t('admin.gift_cards.issued_to') %></th>
+          <th><%= Spree.t(:customer) %></th>
         </tr>
       </thead>
       <tbody>
