--- a/admin/app/views/spree/admin/gift_cards/index.csv.erb
+++ b/admin/app/views/spree/admin/gift_cards/index.csv.erb
@@ -1,14 +1,22 @@
 <%- headers = [
-  'Code', 'Amount', 'Minimum Order Amount', 'Used', 'Status', 'Expires At'
+  Spree.t(:code),
+  Spree.t(:amount),
+  Spree.t(:used),
+  Spree.t(:currency),
+  Spree.t(:status),
+  Spree.t(:expires_at),
+  Spree.t(:customer)
   ]
 -%>
 <%= CSV.generate_line(headers).strip %>
 <%- @collection.find_each do |gift_card| -%>
   <%= CSV.generate_line([
-    gift_card.code.upcase,
-    gift_card.amount.to_f,
-    gift_card.amount_used.to_f,
+    gift_card.display_code,
+    gift_card.display_amount,
+    gift_card.display_amount_used,
+    gift_card.currency,
     gift_card.display_state,
     gift_card.expires_at,
+    gift_card.user&.email,
     ]).strip.html_safe %>
 <%- end -%>
