--- a/admin/app/views/spree/admin/gift_cards/new.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/new.html.erb
@@ -5,7 +5,7 @@
     <%= page_header_back_button spree.admin_gift_cards_path %>
   <% end %>
 
-  <%= Spree.t('admin.gift_cards.new_gift_card') %>
+  <%= Spree.t(:new_gift_card) %>
 <% end %>
 
 <% url = @user.present? ? spree.admin_user_gift_cards_path(@user) : spree.admin_gift_cards_path %>
@@ -17,7 +17,7 @@
       <div class="card mb-4">
         <div class="card-header">
           <h5 class="card-title">
-            <%= Spree.t(:gift_card) %>
+            <%= Spree.t(:new_gift_card) %>
           </h5>
         </div>
         <div class="card-body">
