--- a/admin/app/views/spree/admin/gift_cards/show.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/show.html.erb
@@ -7,11 +7,12 @@
 
   <%= @object.code.upcase %>
   <span class="badge">
-    <%= active_badge(@object.active?, label: @object.display_state) %>
+    <%= active_badge(@object.active?, label: @object.display_state, class: 'badge-sm') %>
   </span>
 <% end %>
 
 <% content_for :title do %>
+  <%= Spree.t(:gift_card) %>
   <%= @object.code.upcase %>
 <% end %>
 
@@ -21,7 +22,7 @@
     <div class="card mb-4">
       <div class="card-header d-flex justify-content-between align-items-center">
         <h5 class="card-title">
-          Gift card usage details
+          <%= Spree.t('admin.gift_cards.usage') %>
         </h5>
       </div>
       <div class="card-body border-bottom">
@@ -30,27 +31,58 @@
             <%= progress_bar_component(@object.amount_used, max: @object.amount) %>
           </div>
           <div class="w-25 text-right">
+            <%= @object.display_amount_used %> <%= Spree.t(:used).downcase %> / <%= @object.display_amount %>
           </div>
         </div>
       </div>
-      <div class="card-body">
-        <ul class="list-group pb-4">
-          <% @object.orders.each do |order| %>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              <% if order %>
-                <%= link_to order.number, spree.edit_admin_order_path(order), class: 'text-dark font-weight-bold d-block w-20' %>
-              <% end %>
-              <div class="w-40 align-items-center">
-                <% if order.user %>
-                  <%= order.user.email %>
+      <div class="card-body p-0">
+        <% if @orders.any? %>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th><%= Spree.t(:order) %></th>
+                  <th><%= Spree.t(:status) %></th>
+                  <th><%= Spree.t(:customer) %></th>
+                  <th class="text-right"><%= I18n.t('activerecord.attributes.spree/gift_card.amount_used') %></th>
+                  <th class="text-right"><%= Spree.t(:total) %></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @orders.each do |order| %>
+                  <tr>
+                    <td>
+                      <%= link_to order.number, spree.edit_admin_order_path(order), class: 'text-dark font-weight-bold' %>
+                    </td>
+                    <td>
+                      <% if order.completed? %>
+                        <span class="badge badge-success">
+                          <%= icon('check') %>
+                          <%= Spree.t("state_machine_states.completed") %>
+                        </span>
+                      <% else %>
+                        <span class="badge badge-warning">
+                          <%= Spree.t("state_machine_states.#{order.state}") %>
+                        </span>
+                      <% end %>
+                    </td>
+                    <td>
+                      <%= order.user.email %>
+                    </td>
+                    <td class="text-right">
+                      <%= order.display_gift_card_total %>
+                    </td>
+                    <td class="text-right">
+                      <%= order.display_total %>
+                    </td>
+                  </tr>
                 <% end %>
-              </div>
-              <span class="text-right w-20">
-                <%= order.display_total_applicable_store_credit %>
-              </span>
-            </li>
-          <% end %>
-        </ul>
+              </tbody>
+            </table>
+          </div>
+        <% else %>
+          <%= render 'spree/admin/shared/no_resource_found', resource_name: Spree.t(:order), new_object_url: nil %>
+        <% end %>
       </div>
     </div>
 
@@ -69,6 +101,66 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <span class="text-muted">
+                <%= Spree.t(:code) %>
+              </span>
+              <span>
+                <code><%= @object.display_code %></code>
+                <%= clipboard_component(@object.display_code) %>
+              </span>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t(:customer) %>
+              </span>
+              <span>
+                <% if @object.user %>
+                  <%= link_to @object.user.email, spree.admin_user_path(@object.user), data: { turbo_frame: '_top' } %>
+                <% else %>
+                  <span class="text-muted">
+                    <%= Spree.t(:not_available) %>
+                  </span>
+                <% end %>
+              </span>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t(:amount) %>
+              </span>
+              <span>
+                <%= @object.display_amount %>
+              </span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t(:used) %>
+              </span>
+              <span>
+                <%= @object.display_amount_used %>
+              </span>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t('store_credit.remaining') %>
+              </span>
+              <span>
+                <%= @object.display_amount_remaining %>
+              </span>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t(:currency) %>
+              </span>
+              <span>
+                <%= @object.currency %>
+              </span>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
                 <%= Spree.t(:expires_at) %>
               </span>
               <% if @object.expires_at %>
@@ -76,6 +168,28 @@
               <% else %>
                 <span class="text-muted"><%= Spree.t(:not_available) %></span>
               <% end %>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t(:created_by) %>
+              </span>
+              <span>
+                <% if @object.created_by %>
+                  <%= link_to @object.created_by.email, spree.admin_admin_user_path(@object.created_by), data: { turbo_frame: '_top' } %>
+                <% else %>
+                  <span class="text-muted">
+                    <%= Spree.t(:not_available) %>
+                  </span>
+                <% end %>
+              </span>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span class="text-muted">
+                <%= Spree.t(:created_at) %>
+              </span>
+              <span><%= local_time(@object.created_at) %></span>
             </li>
           </ul>
         </div>
