--- a/admin/app/views/spree/admin/stock_locations/_form.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/_form.html.erb
@@ -18,7 +18,7 @@
       <div class="form-group">
         <div class="custom-control custom-checkbox">
           <%= f.check_box :active, class: 'custom-control-input' %>
-          <%= f.label :active, class: 'custom-control-label' %>
+          <%= f.label :active, Spree.t(:active), class: 'custom-control-label' %>
         </div>
       </div>
     <% end %>
