--- a/admin/app/views/spree/admin/tax_categories/_form.html.erb
+++ b/admin/app/views/spree/admin/tax_categories/_form.html.erb
@@ -19,7 +19,7 @@
 
     <div class="custom-control custom-checkbox">
       <%= f.check_box :is_default, class: 'custom-control-input' %>
-      <%= f.label :is_default, class: 'custom-control-label' %>
+      <%= f.label :is_default, Spree.t(:is_default), class: 'custom-control-label' %>
     </div>
   </div>
 </div>
