--- a/admin/app/views/spree/admin/oauth_applications/_form.html.erb
+++ b/admin/app/views/spree/admin/oauth_applications/_form.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="form-group">
-  <%= f.label :scopes, raw(Spree.t(:scopes) + required_span_tag) %>
-  <%= f.select :scopes, [['Read Only', 'admin read'], ['Read & Write', 'admin write']], { selected: @oauth_application.scopes.to_s }, { class: 'custom-select' } %>
+  <%= f.label :scopes, raw(Spree.t('admin.oauth_applications.scopes') + required_span_tag) %>
+  <%= f.select :scopes, [[Spree.t('admin.oauth_applications.read_only'), 'admin read'], [Spree.t('admin.oauth_applications.read_and_write'), 'admin write']], { selected: @oauth_application.scopes.to_s }, { class: 'custom-select' } %>
   <%= f.error_message_on :scopes %>
 </div>
