--- a/admin/app/views/spree/admin/stores/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_basic.html.erb
@@ -43,7 +43,7 @@
 
         <div class="form-group">
           <%= f.label :address, Spree.t(:address) %>
-          <%= f.text_area :address, class: 'form-control', data: { controller: 'textarea-autogrow' } %>
+          <%= f.text_area :address, rows: 5, class: 'form-control', data: { controller: 'textarea-autogrow' } %>
         </div>
       </div>
     </div>
