--- a/admin/app/views/spree/admin/translations/stores/_form.html.erb
+++ b/admin/app/views/spree/admin/translations/stores/_form.html.erb
@@ -1,25 +1,14 @@
+<%# locals: (f:, resource:, locale:) %>
+
 <% resource.class.translatable_fields.each do |field| %>
-  <% if field == :meta_keywords %>
-    <% next %>
+  <% next if field == :meta_keywords %>
+
+  <% case field %>
+  <% when :description %>
+    <%= render "spree/admin/translations/translation_rows/rich_textarea_row", f: f, field: field, locale: locale %>
+  <% when :address, :meta_description %>
+    <%= render "spree/admin/translations/translation_rows/textarea_row", f: f, field: field, locale: locale %>
+  <% else %>
+    <%= render "spree/admin/translations/translation_rows/text_field_row", f: f, field: field, locale: locale %>
   <% end %>
-  <tr>
-    <td class="text-left">
-      <%= Spree.t(field) %>
-    </td>
-    <% [@default_locale, selected_translation_locale].each do |translation_locale| %>
-      <% readonly = translation_locale == @default_locale %>
-      <td <% if readonly %>style="width: 40%;"<% else %>style="width: 60%;"<% end %>>
-        <% case field%>
-        <% when :description %>
-          <div class="trix-container mb-0">
-            <%= rich_text_area_tag "translation[#{field}][#{translation_locale}]", resource.get_field_with_locale(translation_locale, field), { contenteditable: !readonly } %>
-          </div>
-        <% when :address %>
-          <%= text_area_tag "translation[#{field}][#{translation_locale}]", resource.get_field_with_locale(translation_locale, field), class: 'form-control', readonly: readonly, data: { controller: 'textarea-autogrow'} %>
-        <% else %>
-          <%= text_field_tag "translation[#{field}][#{translation_locale}]", resource.get_field_with_locale(translation_locale, field), class: 'form-control', readonly: readonly %>
-        <% end %>
-      </td>
-    <% end %>
-  </tr>
 <% end %>
