--- a/admin/app/views/spree/admin/promotions/form/_settings.html.erb
+++ b/admin/app/views/spree/admin/promotions/form/_settings.html.erb
@@ -3,7 +3,7 @@
     <%= f.label :usage_limit, Spree.t('limit_usage_to') %>
     <%= f.number_field :usage_limit, min: 0, step: 1, class: 'form-control' %>
     <span class="form-text text-muted mt-2">
-      Leave this field blank for unlimited usage.
+      <%= Spree.t(:limit_usage_help) %>
     </span>
   </div>
 <% end %>
@@ -15,10 +15,10 @@
 </div>
 
 <div class="form-group">
-  <%= f.label :expires_at %>
+  <%= f.label :expires_at, Spree.t(:expires_at) %>
   <%= f.datetime_field :expires_at, class: 'form-control' %>
   <%= f.error_message_on :expires_at %>
   <span class="form-text text-muted mt-2">
-    Leave this field blank for no expiration.
+    <%= Spree.t(:expires_at_help) %>
   </span>
 </div>
