update promotion views

--- a/admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
-    <span class="text-muted font-weight-normal">Show:</span>
+    <span class="text-muted font-weight-normal"><%= Spree.t(:show) %>:</span>
     <%= gift_cards_filter_dropdown_value %>
   </button>
   <div class="dropdown-menu w-100" style="min-width: 200px">
