--- a/admin/app/views/spree/admin/promotion_rules/forms/_item_total.html.erb
+++ b/admin/app/views/spree/admin/promotion_rules/forms/_item_total.html.erb
@@ -20,7 +20,7 @@
     <%= f.number_field :preferred_amount_max, class: 'form-control' %>
 
     <span class="form-text text-muted mt-2">
-      Leave this field blank to not limit the maximum amount.
+      <%= Spree.t('item_total_rule.blank_maximum_amount_help') %>
     </span>
   </div>
 </div>
