--- a/admin/app/views/spree/admin/promotions/_form.html.erb
+++ b/admin/app/views/spree/admin/promotions/_form.html.erb
@@ -10,11 +10,11 @@
       </div>
       <div class="card-body">
         <div class="form-group">
-          <%= f.label :name %>
+          <%= f.label :name, Spree.t(:name) %>
           <%= f.text_field :name, class: 'form-control', required: true, autofocus: true %>
           <%= f.error_message_on :name %>
           <span class="form-text text-muted mt-2">
-            Customers will see this in their cart and at checkout.
+            <%= Spree.t(:promotion_name_help) %>
           </span>
         </div>
       </div>
