--- a/admin/app/views/spree/admin/users/_filters.html.erb
+++ b/admin/app/views/spree/admin/users/_filters.html.erb
@@ -51,7 +51,7 @@
         <div class="form-group">
           <%= f.label :accepts_email_marketing_eq, Spree.t(:accepts_email_marketing) %>
           <%= f.select :accepts_email_marketing_eq,
-                   options_for_select([["Yes", true], ["No", false]], params[:q][:accepts_email_marketing_eq]),
+                   options_for_select([[Spree.t(:yes), true], [Spree.t(:no), false]], params[:q][:accepts_email_marketing_eq]),
                    { include_blank: true },
                    { class: "custom-select", data: { filters_target: :input } } %>
         </div>
