Do not show order's ship address when order does not required it

--- a/storefront/app/views/themes/default/spree/shared/_order_shipment.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_order_shipment.html.erb
@@ -1,15 +1,17 @@
 <li class="border border-accent mb-4">
   <div class="p-4 lg:p-6">
     <div class="flex flex-col lg:flex-row lg:gap-6 gap-4">
-      <div class="text-sm lg:w-1/2">
-        <div class="tracking-widest uppercase mb-1">
-          <%= Spree.t(:delivery_address) %>
+      <% if shipment.order.requires_ship_address? %>
+        <div class="text-sm lg:w-1/2">
+          <div class="tracking-widest uppercase mb-1">
+            <%= Spree.t(:delivery_address) %>
+          </div>
+          <div class="!leading-[1.375rem] text-neutral-800">
+            <%= render "spree/shared/address",
+            address: shipment.address || shipment.order.ship_address %>
+          </div>
         </div>
-        <div class="!leading-[1.375rem] text-neutral-800">
-          <%= render "spree/shared/address",
-          address: shipment.address || shipment.order.ship_address %>
-        </div>
-      </div>
+      <% end %>
       <div class="text-sm lg:w-1/2 lg:flex justify-between">
         <div>
           <div class="tracking-widest uppercase mb-1">
