--- a/admin/app/views/spree/admin/translations/option_types/_form.html.erb
+++ b/admin/app/views/spree/admin/translations/option_types/_form.html.erb
@@ -3,3 +3,15 @@
 <% resource.class.translatable_fields.each do |field| %>
   <%= render "spree/admin/translations/translation_rows/text_field_row", f: f, field: field, locale: locale %>
 <% end %>
+
+<% if resource.option_values.any? %>
+  <tr class="bg-light">
+    <th colspan="3"><%= Spree.t(:option_values) %></th>
+  </tr>
+
+  <%= f.fields_for :option_values do |ff| %>
+    <% ff.object.class.translatable_fields.each do |field| %>
+      <%= render "spree/admin/translations/translation_rows/text_field_row", f: ff, field: field, locale: locale %>
+    <% end %>
+  <% end %>
+<% end %>
