--- a/admin/app/views/spree/admin/translations/translation_rows/_rich_textarea_row.html.erb
+++ b/admin/app/views/spree/admin/translations/translation_rows/_rich_textarea_row.html.erb
@@ -1,11 +1,9 @@
 <%# locals: (f:, field:, locale:) %>
 
 <tr>
-  <td class="text-left"><%= Spree.t(field) %></td>
-  <td>
-    <div class="trix-container mb-0">
-      <%= f.rich_textarea field, disabled: true, readonly: true, contenteditable: false %>
-    </div>
+  <td class="text-center"><%= Spree.t(field) %></td>
+  <td class="text-wrap">
+    <%= @resource.send(field)%>
   </td>
   <td>
     <div class="trix-container mb-0">
