--- a/admin/app/views/spree/admin/storefront/edit.html.erb
+++ b/admin/app/views/spree/admin/storefront/edit.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <%= content_for(:page_actions) do %>
-  <%= link_to_edit_translations(@store, classes: 'btn btn-light') %>
+  <%= link_to_edit_translations(@store) %>
 <% end %>
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @store }, class: 'mb-5 pb-5' %>
