--- a/admin/app/views/spree/admin/translations/translation_rows/_text_field_row.html.erb
+++ b/admin/app/views/spree/admin/translations/translation_rows/_text_field_row.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (f:, field:, locale:) %>
 
 <tr>
-  <td class="text-left"><%= Spree.t(field) %></td>
-  <td><%= f.text_field field, disabled: true, class: 'form-control' %></td>
+  <td class="text-center"><%= Spree.t(field) %></td>
+  <td><%= @resource.send(field) %></td>
   <td><%= f.text_field "#{field}_#{locale}", class: 'form-control' %></td>
 </tr>
