--- a/admin/app/views/spree/admin/translations/translation_rows/_tinymce_row.html.erb
+++ b/admin/app/views/spree/admin/translations/translation_rows/_tinymce_row.html.erb
@@ -6,6 +6,8 @@
     <%= @resource.send(field) %>
   </td>
   <td>
-    <%= f.textarea "#{field}_#{locale}", rows: 5, class: "form-control", data: { controller: 'textarea-autogrow'} %>
+    <div class="trix-container">
+      <%= f.text_area "#{field}_#{locale}", rows: 10, class: "form-control spree-rte" %>
+    </div>
   </td>
 </tr>
