--- a/admin/app/views/spree/admin/translations/translation_rows/_rich_textarea_row.html.erb
+++ b/admin/app/views/spree/admin/translations/translation_rows/_rich_textarea_row.html.erb
@@ -7,7 +7,7 @@
   </td>
   <td>
     <div class="trix-container mb-0">
-      <%= f.rich_textarea "#{field}_#{locale}" %>
+      <%= f.rich_text_area "#{field}_#{locale}" %>
     </div>
   </td>
 </tr>
