Improve digital items checkout for signed in users
* do not render address book
* skip assigning shipping address
* added sample digital product to samples/sandbox

--- a/core/app/views/spree/shared/_payment.html.erb
+++ b/core/app/views/spree/shared/_payment.html.erb
@@ -23,7 +23,7 @@
     <% elsif payment_method_icon_tag(payment.payment_method.payment_icon_name).present? %>
       <div class="d-flex flex align-items-center items-center">
         <div><%= payment_method_icon_tag(payment.payment_method.payment_icon_name) %></div>
-        <div class="mx-2"><%= Spree.t(:store_credit_name) %></div>
+        <div class="ml-3"><%= Spree.t(:store_credit_name) %></div>
       </div>
     <% end %>
   <% elsif source.present? %>
