Improve displaying items on storefront
* products without images
* order details

--- a/storefront/app/views/spree/checkout/_line_item.html.erb
+++ b/storefront/app/views/spree/checkout/_line_item.html.erb
@@ -1,11 +1,13 @@
 <div class="flex justify-between items-center pt-3">
-  <div class="mr-5 w-[60px] h-[60px] relative rounded bg-accent-100 shrink-0">
+  <div class="mr-5 relative shrink-0">
     <span class="rounded-full text-xs text-center font-bold pl-[0.5px] py-1 w-6 text-sidebar-text bg-background absolute -right-2 -top-3">
       <%= line_item.quantity %>
     </span>
     <% image = line_item.variant.default_image %>
     <% if image.present? && image.attached? && image.variable? %>
-      <%= spree_image_tag(image, class: 'rounded border border-default bg-transparent object-cover object-center', loading: :lazy, width: 60, height: 60) %>
+      <%= spree_image_tag(image, class: 'rounded border border-default bg-transparent object-cover object-center', loading: :lazy, width: 64, height: 64) %>
+    <% else %>
+      <div class="w-16 h-16 bg-accent border border-default rounded"></div>
     <% end %>
   </div>
   <div class="flex-1 pr-3 text-sm">
