Admin: Translate calendar widget UI

--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -56,4 +56,5 @@
 <script>
   window.Spree = window.Spree || {}
   Spree.adminPath = '<%= spree.admin_path %>'
+  Spree.locale = '<%= I18n.locale %>'
 </script>
