Clean up admin forms to center them for better UX

--- a/admin/app/views/spree/admin/integrations/index.html.erb
+++ b/admin/app/views/spree/admin/integrations/index.html.erb
@@ -2,22 +2,22 @@
   <%= Spree.t(:integrations) %>
 <% end %>
 
-<%= content_for(:page_alerts) do %>
-  <div class="alert alert-info">
-    <%= Spree.t('admin.integrations.page_subtitle') %>
-  </div>
-<% end %>
-
-<div class="container px-lg-0 mt-2">
-  <% grouped_available_store_integrations.each do |group, integrations| %>
-    <% if group.present? %>
-      <div class="my-2 text-muted font-weight-light text-uppercase"><%= Spree.t(group) %></div>
-    <% end %>
-
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mb-4">
-      <% integrations.each do |integration| %>
-        <%= render 'spree/admin/integrations/integration', integration_class: integration %>
-      <% end %>
+<div class="row">
+  <div class="col-lg-8 offset-lg-2">
+    <div class="alert alert-info mb-4">
+      <%= Spree.t('admin.integrations.page_subtitle') %>
     </div>
-  <% end %>
+
+    <% grouped_available_store_integrations.each do |group, integrations| %>
+      <% if group.present? %>
+        <div class="my-2 text-muted font-weight-light text-uppercase"><%= Spree.t(group) %></div>
+      <% end %>
+
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mb-4">
+        <% integrations.each do |integration| %>
+          <%= render 'spree/admin/integrations/integration', integration_class: integration %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
