--- a/admin/app/views/spree/admin/payment_methods/edit.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/edit.html.erb
@@ -2,9 +2,13 @@
   <%= page_header_back_button spree.admin_payment_methods_path %>
   <%= @payment_method.name %>
 <% end %>
-<%= render partial: 'spree/admin/shared/error_messages', locals: { target: @payment_method } %>
 
 <%= form_for @payment_method, as: :payment_method, url: spree.admin_payment_method_path(@payment_method) do |f| %>
-  <%= render 'form', f: f %>
-  <%= render 'spree/admin/shared/edit_resource_links', f: f %>
+  <div class="row">
+    <div class="col-lg-6 offset-lg-3">
+      <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @payment_method } %>
+      <%= render 'form', f: f %>
+      <%= render 'spree/admin/shared/edit_resource_links', f: f %>
+    </div>
+  </div>
 <% end %>
