--- a/admin/app/views/spree/admin/stores/form/_checkout.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_checkout.html.erb
@@ -2,33 +2,14 @@
   <%= Spree.t(:checkout) %> <%= Spree.t(:settings) %>
 <% end %>
 
-<%= content_for :page_alerts do %>
-  <div class="alert alert-info mb-3">
-    <p>
-      <%= Spree.t('admin.checkout_settings.policy_copy', policies_link: link_to(Spree.t(:policies), spree.edit_admin_store_path + '?section=policies', class: 'alert-link')).html_safe %>
-    </p>
-  </div>
-<% end %>
-
 <div class="row">
-  <div class="col-lg-7">
-    <div class="card mb-4">
-      <div class="card-header">
-        <h5 class="card-title"><%= Spree.t(:checkout_message) %></h5>
-      </div>
-
-      <div class="card-body">
-        <p class="text-muted">
-          <%= Spree.t('admin.checkout_settings.checkout_message_description') %>
-        </p>
-        <div class="trix-container">
-          <%= f.rich_text_area :checkout_message, class: 'overflow-auto', style: 'height: 300px' %>
-        </div>
-      </div>
+  <div class="col-lg-6 offset-lg-3">
+    <div class="alert alert-info mb-3">
+      <p>
+        <%= Spree.t('admin.checkout_settings.policy_copy', policies_link: link_to(Spree.t(:policies), spree.edit_admin_store_path + '?section=policies', class: 'alert-link')).html_safe %>
+      </p>
     </div>
-  </div>
 
-  <div class="col-lg-5">
     <div class="card mb-4">
       <div class="card-header">
         <h5 class="card-title"><%= Spree.t(:settings) %></h5>
@@ -63,6 +44,21 @@
           <p class="text-muted mt-1">
             <%= Spree.t('admin.checkout_settings.special_instructions.description') %>
           </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-4">
+      <div class="card-header">
+        <h5 class="card-title"><%= Spree.t(:checkout_message) %></h5>
+      </div>
+
+      <div class="card-body">
+        <p class="text-muted">
+          <%= Spree.t('admin.checkout_settings.checkout_message_description') %>
+        </p>
+        <div class="trix-container">
+          <%= f.rich_text_area :checkout_message, class: 'overflow-auto', style: 'height: 300px' %>
         </div>
       </div>
     </div>
