--- a/admin/app/views/spree/admin/admin_users/show.html.erb
+++ b/admin/app/views/spree/admin/admin_users/show.html.erb
@@ -13,7 +13,7 @@
       <div class="card-header">
         <h5 class="card-title">
           <%= icon 'history', class: 'mr-1' %>
-          <%= Spree.t(:audit_log) %>
+          <%= Spree.t('admin.audit_log') %>
         </h5>
       </div>
       <div class="card-body">
