Small improvements to product form option values handling
* do not allow to try to create new option types when user doesn't have access
* fix option values autocomplete - user needs only read access to this
* fix new option value name parameterization

--- a/admin/app/views/spree/admin/products/form/_variants.html.erb
+++ b/admin/app/views/spree/admin/products/form/_variants.html.erb
@@ -56,7 +56,7 @@
                 <label class="label" for="new_option_name"><%= Spree.t(:option_name) %></label>
                 <%= tom_select_tag :new_option_name,
                   multiple: false,
-                  create: true,
+                  create: can?(:create, Spree::OptionType),
                   preloaded_options: option_types_for_select,
                   include_blank: true,
                   select_data: {
