--- a/admin/app/assets/stylesheets/spree/admin/components/_filters.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_filters.scss
@@ -1,6 +1,6 @@
 .filter-wrap {
   padding: 0.5rem;
-  border-bottom: 1px solid $gray-50;
+  border-bottom: 1px solid $table-border-color;
   gap: 0.5rem;
   position: sticky;
   top: $header-height;
